<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".stopwatchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <AutoCompleteTextView
            android:id="@+id/timerNameAutoComplete"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/enter_timer_name_optional"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/timerNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/timer_name"
            android:text="General"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_00"
            android:textColor="@android:color/black"
            android:textSize="54sp"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/millis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_000"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_countdown"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="@+id/text_view_countdown"
            app:layout_constraintTop_toBottomOf="@+id/text_view_countdown" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="350sp"
            android:layout_height="350sp"
            android:progress="80"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/lapFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:text="Lap"
            android:theme="@style/Theme.MaterialComponents.NoActionBar"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#FFFFFF"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play"
            tools:visibility="gone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pause" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/ic_replay" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>